--- a/app/src/main/res/values/style_strings.xml
+++ b/app/src/main/res/values/style_strings.xml
@@ -310,312 +310,165 @@
   </string>
   <string name="dark_2" translatable="false">
   [
-    {
-        \"featureType\": \"all\",
-        \"elementType\": \"labels.text.fill\",
-        \"stylers\": [
-            {
-                \"saturation\": 36
-            },
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 40
-            }
+      {
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#242f3e"
+          }
         ]
-    },
-    {
-        \"featureType\": \"all\",
-        \"elementType\": \"labels.text.stroke\",
-        \"stylers\": [
-            {
-                \"visibility\": \"on\"
-            },
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 16
-            }
+      },
+      {
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#746855"
+          }
         ]
-    },
-    {
-        \"featureType\": \"all\",
-        \"elementType\": \"labels.icon\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "elementType": "labels.text.stroke",
+        "stylers": [
+          {
+            "color": "#242f3e"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative\",
-        \"elementType\": \"geometry.fill\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 20
-            }
+      },
+      {
+        "featureType": "administrative.locality",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#d59563"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative\",
-        \"elementType\": \"geometry.stroke\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 17
-            },
-            {
-                \"weight\": 1.2
-            }
+      },
+      {
+        "featureType": "poi",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#d59563"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative\",
-        \"elementType\": \"labels\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "featureType": "poi.park",
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#263c3f"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.country\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            }
+      },
+      {
+        "featureType": "poi.park",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#6b9a76"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.country\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            }
+      },
+      {
+        "featureType": "road",
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#38414e"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.country\",
-        \"elementType\": \"labels.text\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            }
+      },
+      {
+        "featureType": "road",
+        "elementType": "geometry.stroke",
+        "stylers": [
+          {
+            "color": "#212a37"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.province\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "featureType": "road",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#9ca5b3"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.locality\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            },
-            {
-                \"saturation\": \"-100\"
-            },
-            {
-                \"lightness\": \"30\"
-            }
+      },
+      {
+        "featureType": "road.highway",
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#746855"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.neighborhood\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "featureType": "road.highway",
+        "elementType": "geometry.stroke",
+        "stylers": [
+          {
+            "color": "#1f2835"
+          }
         ]
-    },
-    {
-        \"featureType\": \"administrative.land_parcel\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "featureType": "road.highway",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#f3d19c"
+          }
         ]
-    },
-    {
-        \"featureType\": \"landscape\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            },
-            {
-                \"gamma\": \"0.00\"
-            },
-            {
-                \"lightness\": \"74\"
-            }
+      },
+      {
+        "featureType": "transit",
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#2f3948"
+          }
         ]
-    },
-    {
-        \"featureType\": \"landscape\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 20
-            }
+      },
+      {
+        "featureType": "transit.station",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#d59563"
+          }
         ]
-    },
-    {
-        \"featureType\": \"landscape.man_made\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"lightness\": \"3\"
-            }
+      },
+      {
+        "featureType": "water",
+        "elementType": "geometry",
+        "stylers": [
+          {
+            "color": "#17263c"
+          }
         ]
-    },
-    {
-        \"featureType\": \"poi\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"off\"
-            }
+      },
+      {
+        "featureType": "water",
+        "elementType": "labels.text.fill",
+        "stylers": [
+          {
+            "color": "#515c6d"
+          }
         ]
-    },
-    {
-        \"featureType\": \"poi\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 21
-            }
+      },
+      {
+        "featureType": "water",
+        "elementType": "labels.text.stroke",
+        "stylers": [
+          {
+            "color": "#17263c"
+          }
         ]
-    },
-    {
-        \"featureType\": \"road\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"saturation\": \"-100\"
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"visibility\": \"simplified\"
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road.highway\",
-        \"elementType\": \"all\",
-        \"stylers\": [
-            {
-                \"visibility\": \"on\"
-            },
-            {
-                \"saturation\": \"-100\"
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road.highway\",
-        \"elementType\": \"geometry.fill\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 17
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road.highway\",
-        \"elementType\": \"geometry.stroke\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 29
-            },
-            {
-                \"weight\": 0.2
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road.arterial\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 18
-            }
-        ]
-    },
-    {
-        \"featureType\": \"road.local\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 16
-            }
-        ]
-    },
-    {
-        \"featureType\": \"transit\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 19
-            }
-        ]
-    },
-    {
-        \"featureType\": \"water\",
-        \"elementType\": \"geometry\",
-        \"stylers\": [
-            {
-                \"color\": \"#000000\"
-            },
-            {
-                \"lightness\": 17
-            }
-        ]
-    }
+      }
   ]
   </string>
 </resources>
