--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="MyTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="MyTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">false</item>
@@ -25,26 +25,13 @@
         <item name="android:textColorHint">@color/text_hint</item>
         <item name="dividerColor">@color/light_gray</item>
         <item name="elevation">2dp</item>
-        <item name="backgroundElevatedColor">?backgroundViewColor</item>
+        <item name="backgroundElevatedColor">@color/color_main_background_elevated</item>
         <item name="departureHourColor">@color/light_gray</item>
     </style>
 
     <style name="WhiteTheme" parent="MyTheme">
     </style>
 
-    <style name="DarkTheme" parent="MyTheme">
-        <item name="backgroundViewColor">@color/color_main_background_dark</item>
-        <item name="android:textColor">@color/color_text_dark</item>
-        <item name="containerBackground">@drawable/stretched_circle</item>
-        <item name="containerBorderColor">@color/light_gray_2</item>
-        <item name="android:editTextColor">@android:color/white</item>
-        <item name="android:textColorHint">#ffA2A2A2</item>
-        <item name="dividerColor">@color/divider_dark</item>
-        <item name="android:windowBackground">@color/color_main_background_dark</item>
-        <item name="backgroundElevatedColor">@color/color_main_background_dark_elevated</item>
-        <item name="departureHourColor">#12FFFFFF</item>
-        <item name="android:colorEdgeEffect">@color/divider_dark</item>
-    </style>
 
     <style name="WhiteAlert" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:colorAccent">@color/colorAccent</item>
@@ -59,10 +46,10 @@
     <style name="DarkAlert" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:textColor">@color/text_hint</item>
-        <item name="android:textColorPrimary">@color/color_text_dark</item>
-        <item name="android:actionMenuTextColor">@color/color_text_dark</item>
-        <item name="textColorAlertDialogListItem">@color/color_text_dark</item>
-        <item name="android:background">@color/color_main_background_dark</item>
+        <item name="android:textColorPrimary">@color/color_text</item>
+        <item name="android:actionMenuTextColor">@color/color_text</item>
+        <item name="android:background">@color/color_main_background</item>
+        <item name="textColorAlertDialogListItem">@color/color_text</item>
     </style>
 
     <style name="robotoBoldTitle">
