--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -6,5 +6,6 @@
         <item name="android:windowLightStatusBar">@bool/isLightTheme</item>
         <item name="android:statusBarColor">@color/color_main_background</item>
         <item name="android:windowLightNavigationBar">@bool/isLightTheme</item>
+        <item name="android:editTextColor">@color/color_text</item>
     </style>
 </resources>
