--- a/app/src/main/res/layout/template_departure_hour.xml
+++ b/app/src/main/res/layout/template_departure_hour.xml
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:alpha="0"
-            android:background="?dividerColor" />
+            android:background="?attr/dividerColorCustom" />
 
     </LinearLayout>
 
