--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="containerBorderPadding">0dp</item>
         <item name="containerBorderPaddingSide">0dp</item>
         <item name="android:textColorHint">@color/text_hint</item>
-        <item name="dividerColor">@color/light_gray</item>
+        <item name="dividerColorCustom">@color/light_gray</item>
         <item name="elevation">2dp</item>
         <item name="backgroundElevatedColor">@color/color_main_background_elevated</item>
         <item name="departureHourColor">@color/light_gray</item>
