--- a/app/src/main/res/layout/template_station.xml
+++ b/app/src/main/res/layout/template_station.xml
@@ -101,5 +101,5 @@
         android:layout_marginStart="22dp"
         android:layout_marginEnd="22dp"
         android:alpha=".5"
-        android:background="?dividerColor" />
+        android:background="?attr/dividerColorCustom" />
 </LinearLayout>
