--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
 
     <attr name="containerBackground" format="reference" />
     <attr name="backgroundViewColor" format="reference" />
-    <attr name="dividerColor" format="reference" />
+    <attr name="dividerColorCustom" format="reference" />
     <attr name="containerBorderColor" format="reference" />
     <attr name="containerBorderMargin" format="dimension" />
     <attr name="containerBorderPadding" format="dimension" />
