--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -7,5 +7,6 @@
         <item name="android:statusBarColor">@color/color_main_background</item>
         <item name="android:windowLightNavigationBar">@bool/isLightTheme</item>
         <item name="android:editTextColor">@color/color_text</item>
+        <item name="departureActive">@color/departure_active</item>
     </style>
 </resources>
