--- a/app/src/main/res/layout/activity_route_bottom.xml
+++ b/app/src/main/res/layout/activity_route_bottom.xml
@@ -151,6 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_margin="32dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:visibility="gone">
