--- a/app/src/main/res/layout/fragment_stations.xml
+++ b/app/src/main/res/layout/fragment_stations.xml
@@ -32,7 +32,8 @@
                 app:tabIndicatorFullWidth="false"
                 app:tabRippleColor="@android:color/transparent"
                 app:tabSelectedTextColor="@color/colorAccent"
-                app:tabTextAppearance="@style/AppTheme.Tabs.TextAppearance"
+                app:tabTextAppearance="@style/TabTextAppearance"
+                app:tabMode="fixed"
                 app:tabTextColor="@color/text_hint" />
 
 
