--- a/app/src/main/res/layout/fragment_stations_sub.xml
+++ b/app/src/main/res/layout/fragment_stations_sub.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:background="?backgroundViewColor"
         android:nestedScrollingEnabled="true"
+        android:visibility="gone"
         tools:context=".ui.fragments.lpp.subfragments.StationsSubFragment"
         tools:listitem="@layout/template_station" />
 
