--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,9 +90,11 @@
 
 
     <!-- styles.xml -->
-    <style name="AppTheme.Tabs.TextAppearance" parent="TextAppearance.Design.Tab">
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="fontFamily">@font/google_sans</item>
     </style>
 
 </resources>
